--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
             <artifactId>spring-beans</artifactId>
             <version>5.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.11</version>
+        </dependency>
     </dependencies>
 </project>
